Adding retrofit version

--- a/dynamic-pipeline.cabal
+++ b/dynamic-pipeline.cabal
@@ -109,6 +109,7 @@ executable examples
       Graph.ConnComp
       Graph.ConnectedComp
       Misc.RepeatedDP
+      Misc.RepeatedTwiceDP
   hs-source-dirs:
       examples
   default-extensions:
