--- a/dynamic-pipeline.cabal
+++ b/dynamic-pipeline.cabal
@@ -155,10 +155,11 @@ executable examples
     , async
     , base >=4.7 && <5
     , bytestring >=0.10.9.0 && <=0.11.1.0
+    , containers
     , dynamic-pipeline
     , lens >=4.19 && <=5.0.1
     , optparse-applicative
-    , relude >=0.7.0.0 && <=1.0.0.1
+    , relude
     , trifecta
     , unagi-chan >=0.4.1.0
   default-language: Haskell2010
